Верстка 2 экрана без карточек

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">lesson22032023</string>
+    <string name="app_name">HITs</string>
     <string name="sign_up">Sign up</string>
     <string name="sign_up_btn">Sign up</string>
     <string name="log_in">Log in</string>
@@ -9,4 +9,7 @@
     <string name="email">E-mail</string>
     <string name="password">Password</string>
     <string name="back_arrow_description">Back Arrow</string>
+    <string name="topic_title"><b>What Brings you</b>\nto Silent Moon?</string>
+    <string name="topic_subtitle">choose a topic to focus on:</string>
+    <string name="topic_clouds_description">Clouds</string>
 </resources>
